--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ostrava",
+  "name": "warsaw-python-pizza",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/pythonpizza/ostrava.python.pizza",
+  "repository": "https://github.com/pythonpizza/warsaw.python.pizza",
   "author": "Jake Balas <jake@balas.io>",
   "license": "MIT",
   "engines": {
